--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,4 @@
-:root {
-  --dark-color: #555a54;
-  --background-color: #bfbbaf;
-  --creme-color: #f7f2ef;
-  --grey-color: #e1ddd2;
-}
-
 * {
-  border: 1px double red;
   padding: 0;
   margin: 0;
 }
@@ -26,8 +18,10 @@ html {
 }
 
 #global-header img {
-  max-width: 5%;            /* Maximum width, adjust this value if needed */
-  max-height: 100%;          /* Maximum height */
+  max-width: 5%;
+  /* Maximum width, adjust this value if needed */
+  max-height: 100%;
+  /* Maximum height */
 }
 
 #global-header h1 {
@@ -442,11 +436,8 @@ html {
   font-weight: 400;
   color: #fff;
   display: flex;
-  /* Added for centering */
   align-items: center;
-  /* Vertically centers the text */
   justify-content: center;
-  /* Horizontally centers the text */
 }
 
 .pill-box-right {
@@ -519,27 +510,11 @@ html {
   align-items: baseline;
 }
 
-#project1 {
+.project {
   display: flex;
   height: 100vh;
   align-items: center;
   justify-content: space-between;
-}
-
-#project2 {
-  display: flex;
-  height: 100vh;
-  align-items: center;
-  justify-content: space-between;
-  opacity: 1;
-}
-
-#project3 {
-  display: flex;
-  height: 100vh;
-  align-items: center;
-  justify-content: space-between;
-  opacity: 1;
 }
 
 .project-img-container {
@@ -547,15 +522,14 @@ html {
 }
 
 .project-img-container img {
-  max-width: 100%; 
-  border-radius: 50%;
+  max-width: 100%;
 }
 
 .project-description {
   font-family: 'Josefin Sans', sans-serif;
   color: #fff;
   flex-basis: 60%;
-  padding: 0.5rem ;
+  padding: 0.5rem;
   text-transform: uppercase;
 }
 
@@ -582,134 +556,111 @@ html {
 }
 
 #contact {
+  margin-inline: auto;
   background-color: #000;
-  height: 100vh;
-  position: relative;
-  overflow-x: hidden;
+  display: flex;
+  gap: 50px;
+  align-items: baseline;
 }
 
-#contact-heading {
-  height: 100vh;
+#contact-container h3 {
   text-align: center;
-}
-
-#contact-heading h3 {
-  top: 50%;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   color: #fff;
   letter-spacing: 15px;
-  font-size: 15.7vw;
-  font-weight: 400;
-  text-transform: uppercase;
-  transform: translateY(-50);
-}
-
-#contact-info {
-  height: 100vh;
-  opacity: 0;
-  transition: opacity 0.5s;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#contact-info h2,
-h3 {
-  font-family: 'Josefin Sans', sans-serif;
   color: #fff;
-  letter-spacing: 15px;
-  font-size: 4.7vw;
+  font-size: 5vw;
+  letter-spacing: 5px;
   font-weight: 400;
   text-transform: uppercase;
+  margin: 10vh 0;
 }
 
-/* #contact form {
+#contact-section {
+  display: flex;
+  gap: 15px; 
+
+}
+
+#social-section {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 15px;
+  width: 50%;
+}
+
+.social-icon {
+  width: 45%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;  /* Adjust this value if needed */
+  font-size: 2rem; /* Adjust this value if needed */
+  color: white;
+}
+
+.social-icon a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;  
+  width: 100%;
+  height: 100%;
+  font-size: 50px;
+}
+
+.social-icon a:hover, .social-icon a:focus {
+    color: inherit; 
+    opacity: 0.8;
+
+}
+
+#pills-section {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 80%;
-  max-width: 510px;
-  min-width: 324px;
-  background-color: var(--grey-color);
-  border: 1px solid lighten(var(--creme-color), 1%);
-  border-bottom: 3px solid var(--creme-color);
-  padding: 2rem;
-} */
+  gap: 25px;
+}
 
-/* #contact h2,
-#contact h3 {
+.contact-pill {
+  padding: 1.0rem 1.0rem;
+  border-radius: 2.5rem;
+  position: relative;
+  height: auto;
+  min-height: 2rem;
+  background: linear-gradient(330deg, #000, #000, #C08261);
+  border: 2px solid #C08261;
+  max-width: 100%;
   text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+  color: #fff;
+  letter-spacing: 5px;
+  font-size: 1.5rem;
+  font-weight: 400;
+  text-transform: uppercase;
 }
-
-#contact label {
-  align-self: flex-start;
-}
-
-#contact input[type="text"] {
-  margin: 0.5em 0;
-  width: 100%;
-  border: 1px solid var(--dark-color);
-  padding: 6px 10px;
-  color: var(--dark-color);
-  font-size: pxtoem(16, 16);
-}
-
-#contact input[type="submit"] {
-  margin-top: 1em;
-  padding: 6px 10px;
-  color: var(--creme-color);
-  border: 1px solid var(--dark-color);
-  background-color: var(--dark-color);
-  cursor: pointer;
-  border-radius: 12px;
-}
-
-#contact input[type="submit"]:hover {
-  background-color: var(--creme-color);
-  color: var(--dark-color); 
-}*/
-
 
 .footer {
-  display: flex;
-  align-items: flex-start;
-  gap: 40px;
-  margin: 0 auto;
-  color: var(--background-color);
-  background-color: var(--dark-color);
+  display: flex; /* Change this from block to flex */
+  justify-content: space-between; /* This will space the child elements between the left and right extremes */
+  background-color: #000;
   padding: 20px 20px;
-  justify-content: space-between;
-}
-
-#footer-links {
-  display: flex;
-  gap: 18px;
-}
-
-#footer-links>div {
-  display: grid;
-  gap: 10px;
-  margin-bottom: 30px;
-}
-
-.footer h2 {
-  margin: 0;
-  font-size: 16px;
-  font-weight: 400;
-  color: var(--creme-color);
 }
 
 #copyright {
-  font-size: 12px;
+  display: flex; /* Make this a flex container to handle its children's layout */
+  justify-content: space-between; /* Space the child elements (span and a) between the left and right extremes */
+  width: 100%; /* Ensure this container spans the full width of its parent */
+  font-family: 'Josefin Sans', sans-serif;
+  color: #fff;
+  font-size: 1.0rem;
+  font-weight: 400;
 }
 
-#copyright>a {
-  margin: 0 4px;
-}
-
-#copyright>span {
-  margin-right: 10px;
+#copyright > a, #copyright > span {
+  margin: 0 4px; /* Giving equal margins for both the span and the a for consistency */
 }
 
 .hidden {
