--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,14 +8,42 @@ html {
   background-color: #000;
 }
 
+/* This ensures the body always has the space reserved for a scrollbar */
+body {
+  overflow: hidden;
+  scrollbar-width: thin; 
+  scrollbar-color: rgba(97, 97, 97, 0.5) transparent;
+  animation: scrollAppear 0.5s ease forwards 3.7s;
+}
+
+/* For Chrome, Safari */
+body::-webkit-scrollbar {
+  width: 12px; /* Adjust width to your preference */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(97, 97, 97, 0.5); /* Adjust color to your preference */
+}
+
+@keyframes scrollAppear{
+  to {
+    overflow: visible;
+  }
+}
+
+#global-header, #main-content {
+  opacity: 0;
+  transition: opacity 0.5s ease; /* Adjust the duration as per your preference */
+}
+
 #global-header {
   font-family: 'Josefin Sans', sans-serif;
   width: 100%;
   /* display: flex;
   justify-content: space-between; */
   text-align: center;
-  background-color: #000;
   align-items: center;
+  opacity: 0;
 }
 
 #global-header nav img {
@@ -30,7 +58,7 @@ html {
   font-weight: 100;
   color: #fff;
   visibility: hidden;
-  animation: headerAppear 2s forwards 1.5s;
+  animation: headerAppear 2s forwards 3.7s;
   z-index: 100;
   margin-top: 10px;
   position: absolute;
@@ -43,7 +71,7 @@ html {
   display: flex;
   justify-content: space-between;
   visibility: hidden;
-  animation: headerAppear 2s forwards 1.5s;
+  animation: headerAppear 2s forwards 3.7s;
   z-index: 100;  
   align-items: center;
 }
@@ -85,7 +113,6 @@ html {
   background-color: grey;
 }
 
-
 .home {
   display: flex;
   flex-direction: column;
@@ -95,7 +122,6 @@ html {
   width: 100%;
   background-color: #000;
   position: relative;
-  margin-bottom: 10vh;
 }
 
 .home h2 {
@@ -106,7 +132,103 @@ html {
   font-weight: 500;
   opacity: 0;
   visibility: hidden;
-  animation: fadeIn 2s forwards 0.5s;
+  animation: fadeIn 2s forwards 3.7s;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 100;
+}
+
+#loading-screen {
+  position: fixed;
+  width: 60vw; /* Adjust as necessary */
+  height: auto; /* Maintain the SVG's aspect ratio */
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: disappear 0.5s ease forwards 3.5s;
+  z-index: 1000;
+}
+
+#loading-screen path:nth-child(2){
+  stroke-dasharray: 646;
+  stroke-dashoffset: 646;
+  animation: lin-animation 2s ease forwards;
+} 
+#loading-screen path:nth-child(3){
+  stroke-dasharray: 651;
+  stroke-dashoffset: 651;
+  animation: lin-animation 2s ease forwards 0.3s;
+
+}
+#loading-screen path:nth-child(4){
+  stroke-dasharray: 402;
+  stroke-dashoffset: 402;
+  animation: lin-animation 2s ease forwards 0.6s;
+}
+#loading-screen path:nth-child(5){
+  stroke-dasharray: 1022px;
+  stroke-dashoffset: 1022px;
+  animation: lin-animation 2s ease forwards 0.9s;
+
+}
+#loading-screen path:nth-child(6){
+  stroke-dasharray: 886px;
+  stroke-dashoffset: 886px;
+  animation: lin-animation 2s ease forwards 1.2s;
+
+} 
+#loading-screen path:nth-child(7){
+  stroke-dasharray: 1027px;
+  stroke-dashoffset: 1027px;
+  animation: lin-animation 2s ease forwards 1.5s;
+
+}
+#loading-screen path:nth-child(8){
+  stroke-dasharray: 767px;
+  stroke-dashoffset: 767px;
+  animation: lin-animation 2s ease forwards 0.3s;
+
+}
+#loading-screen path:nth-child(9){
+  stroke-dasharray: 885px;
+  stroke-dashoffset: 885px;
+  animation: lin-animation 2s ease forwards 0.6s;
+
+}
+#loading-screen path:nth-child(10){
+  stroke-dasharray: 716px;
+  stroke-dashoffset: 716px;
+  animation: lin-animation 2s ease forwards 0.9s;
+
+}
+#loading-screen path:nth-child(11){
+  stroke-dasharray: 769px;
+  stroke-dashoffset: 769px;
+  animation: lin-animation 2s ease forwards 1.2s;
+
+}
+#loading-screen path:nth-child(12){
+  stroke-dasharray: 786px;
+  stroke-dashoffset: 786px;
+  animation: lin-animation 2s ease forwards 1.5s;
+}  
+
+@keyframes lin-animation {
+  to{
+    stroke-dashoffset: 0px;
+  }
+}
+
+@keyframes disappear {
+  from{
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
 @keyframes fadeIn {
@@ -121,22 +243,6 @@ html {
   }
 }
 
-#landingPage-content {
-  z-index: 2;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-#landingPage-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: block;
-  align-items: center;
-}
-
 #img1 {
   width: 10%;
   position: absolute;
@@ -144,7 +250,7 @@ html {
   top: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
-  animation: fadeIn 2s forwards 1s;
+  animation: fadeIn 2s forwards 3.7s;
 }
 
 @keyframes fadeIn {
@@ -205,27 +311,27 @@ html {
 }
 
 #img1 {
-  animation: floatim1 2s forwards 2s;
+  animation: floatim1 2s forwards 3.7s;
 }
 
 #img2 {
-  animation: floatim2 2s forwards 2s;
+  animation: floatim2 2s forwards 3.7s;
 }
 
 #img3 {
-  animation: floatim3 2s forwards 2s;
+  animation: floatim3 2s forwards 3.7s;
 }
 
 #img4 {
-  animation: floatim4 2s forwards 2s;
+  animation: floatim4 2s forwards 3.7s;
 }
 
 #img5 {
-  animation: floatim5 2s forwards 2s;
+  animation: floatim5 2s forwards 3.7s;
 }
 
 #img6 {
-  animation: floatim6 2s forwards 2s;
+  animation: floatim6 2s forwards 3.7s;
 }
 
 @-webkit-keyframes floatim1 {
